--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,10 @@
         android:allowBackup="true"
         android:icon="@drawable/applogo"
         android:label="@string/app_name"
-
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartSocket">
-        <activity android:name=".UserRegister"></activity>
+        <activity android:name=".ControlPanel"></activity>
+        <activity android:name=".UserRegister" />
         <activity android:name=".UserLogin" />
         <activity android:name=".SplashScreen">
             <intent-filter>
