--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     compile 'com.amitshekhar.android:android-networking:1.0.2'
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+    //implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.1.1'
 }
