--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,16 @@
     package="com.example.smartsocket">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/applogo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartSocket">
-        <activity android:name=".ControlPanel"></activity>
+        <activity android:name=".Graph"></activity>
+        <activity android:name=".ControlPanel" />
         <activity android:name=".UserRegister" />
         <activity android:name=".UserLogin" />
         <activity android:name=".SplashScreen">
