--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,13 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    compile 'com.amitshekhar.android:android-networking:1.0.2'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
-    //implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.jjoe64:graphview:4.2.2'
+
+   // compile 'com.github.PhilJay:MPAndroidChart:v2.0.9'
+
+
 }
