--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:icon="@drawable/applogo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SmartSocket">
-        <activity android:name=".Graph"></activity>
+        android:theme="@style/Theme.SmartSocket"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".GraphActivity"></activity>
         <activity android:name=".ControlPanel" />
         <activity android:name=".UserRegister" />
         <activity android:name=".UserLogin" />
